// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Checkout renders correctly for "/delivery" route 1`] = `
Array [
  .c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
}

.c4 {
  font-weight: 400;
  padding-right: 0.4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
    className="c0"
  >
    <nav
      className="c1"
    >
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            1.
          </span>
          Delivery
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/payment"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            2.
          </span>
          Payment
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/review"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            3.
          </span>
          Review
        </span>
      </a>
    </nav>
  </div>,
  .c0 {
  padding-top: 3rem;
  padding-bottom: 12rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.c4 {
  border: 0;
  background: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  min-height: 2rem;
  cursor: pointer;
}

.c4 svg {
  display: block;
}

.c6 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 2.4rem;
  font-weight: 700;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c5 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
  z-index: 6000;
}

.c3 {
  font-size: 2.4rem;
  text-align: left;
  margin: 1rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<article
    className="c0"
  >
    <section
      className="c1"
    >
      <h1
        className="c2"
      >
        Delivery
      </h1>
      <section>
        <h2
          className="c3"
        >
          Shipping Address
          <button
            className="c4"
            data-testid="modal-trigger"
            onClick={[Function]}
          >
            <svg
              height="18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="9"
                cy="9"
                fill="#222"
                r="9"
              />
              <path
                d="M9.833 6.241H8.167V4.724h1.666v1.517zM8.167 7.49h1.666v5.786H8.167V7.49z"
                fill="#fff"
              />
            </svg>
          </button>
        </h2>
      </section>
    </section>
    <div
      className="c5"
    >
      <a
        className="c6"
        data-testid="next-step-button"
        href="/checkout/payment"
        onClick={[Function]}
      >
        Continue to Payment
      </a>
    </div>
  </article>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/payment" route 1`] = `
Array [
  .c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
}

.c4 {
  font-weight: 400;
  padding-right: 0.4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
    className="c0"
  >
    <nav
      className="c1"
    >
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            1.
          </span>
          Delivery
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/payment"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            2.
          </span>
          Payment
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/review"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            3.
          </span>
          Review
        </span>
      </a>
    </nav>
  </div>,
  .c0 {
  padding-top: 3rem;
  padding-bottom: 12rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.c10 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 2.4rem;
  font-weight: 700;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c9 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
  z-index: 6000;
}

.c4 {
  font-size: 2.4rem;
  text-align: left;
  margin: 1rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5:last-child {
  margin-bottom: 0;
}

.c6 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #008484;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6:last-child {
  margin-bottom: 0;
}

.c8 {
  font-weight: 700;
}

.c7 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-top: 1px solid #b0b0b0;
  padding-top: 2rem;
  margin-top: 2rem;
}

.c7:last-child {
  margin-bottom: 0;
}

.c3 {
  border-top: 1px solid #b0b0b0;
  padding-top: 2rem;
}

<article
    className="c0"
  >
    <section
      className="c1"
    >
      <h1
        className="c2"
      >
        Payment
      </h1>
    </section>
    <section
      className="c3"
    >
      <section
        className="c1"
      >
        <h2
          className="c4"
        >
          Order Summary
        </h2>
        <p
          className="c5"
        >
          <span>
            Subtotal
          </span>
          <span>
            $125.00
          </span>
        </p>
        <p
          className="c6"
        >
          <span>
            Kohl's Cash & Discounts
          </span>
          <span>
            -$18.75
          </span>
        </p>
        <p
          className="c5"
        >
          <span>
            Shipping
          </span>
          <strong>
            FREE
          </strong>
        </p>
        <p
          className="c5"
        >
          <span>
            Tax
          </span>
          <span>
            $6.38
          </span>
        </p>
        <p
          className="c7"
        >
          <span
            className="c8"
          >
            Total
          </span>
          <span
            className="c8"
          >
            $
            122.7
          </span>
        </p>
        <p
          className="c5"
        >
          <span>
            Your Savings
          </span>
          <span>
            $122.70
          </span>
        </p>
      </section>
    </section>
    <div
      className="c9"
    >
      <a
        className="c10"
        data-testid="next-step-button"
        href="/checkout/review"
        onClick={[Function]}
      >
        Review Order
      </a>
    </div>
  </article>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/review" route 1`] = `
Array [
  .c3 {
  background: #ffffff;
  color: #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left: 1px solid #b0b0b0;
}

.c2:last-child {
  border-right: 1px solid #b0b0b0;
}

.c0 {
  width: 100%;
  border-bottom: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
}

.c4 {
  font-weight: 400;
  padding-right: 0.4rem;
}

@media (max-width:48em) {
  .c2:first-child {
    border-left: 0;
  }

  .c2:last-child {
    border-right: 0;
  }
}

@media (max-width:48em) {
  .c1 {
    padding: 0;
  }
}

<div
    className="c0"
  >
    <nav
      className="c1"
    >
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            1.
          </span>
          Delivery
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/payment"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            2.
          </span>
          Payment
        </span>
      </a>
      <a
        className="c2"
        data-testid="navigation-link"
        href="/checkout/review"
        onClick={[Function]}
      >
        <span
          className="c3"
        >
          <span
            className="c4"
          >
            3.
          </span>
          Review
        </span>
      </a>
    </nav>
  </div>,
  .c0 {
  padding-top: 3rem;
  padding-bottom: 12rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.c11 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 2.4rem;
  font-weight: 700;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c10 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
  z-index: 6000;
}

.c3 {
  font-size: 2.4rem;
  text-align: left;
  margin: 1rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #008484;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7:last-child {
  margin-bottom: 0;
}

.c9 {
  font-weight: 700;
}

.c8 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-top: 1px solid #b0b0b0;
  padding-top: 2rem;
  margin-top: 2rem;
}

.c8:last-child {
  margin-bottom: 0;
}

.c5 {
  border-top: 1px solid #b0b0b0;
  padding-top: 2rem;
}

.c4 {
  color: #008484;
  font-weight: 700;
  font-size: 1.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: none;
}

<article
    className="c0"
  >
    <section
      className="c1"
    >
      <h1
        className="c2"
      >
        Review
      </h1>
      <section>
        <h2
          className="c3"
        >
          Shipping Details
          <a
            className="c4"
            href="/checkout/delivery"
            onClick={[Function]}
          >
            Edit
          </a>
        </h2>
      </section>
      <section>
        <h2
          className="c3"
        >
          Payment Information
          <a
            className="c4"
            href="/checkout/payment"
            onClick={[Function]}
          >
            Edit
          </a>
        </h2>
      </section>
    </section>
    <section
      className="c5"
    >
      <section
        className="c1"
      >
        <h2
          className="c3"
        >
          Order Summary
        </h2>
        <p
          className="c6"
        >
          <span>
            Subtotal
          </span>
          <span>
            $125.00
          </span>
        </p>
        <p
          className="c7"
        >
          <span>
            Kohl's Cash & Discounts
          </span>
          <span>
            -$18.75
          </span>
        </p>
        <p
          className="c6"
        >
          <span>
            Shipping
          </span>
          <strong>
            FREE
          </strong>
        </p>
        <p
          className="c6"
        >
          <span>
            Tax
          </span>
          <span>
            $6.38
          </span>
        </p>
        <p
          className="c8"
        >
          <span
            className="c9"
          >
            Total
          </span>
          <span
            className="c9"
          >
            $
            122.7
          </span>
        </p>
        <p
          className="c6"
        >
          <span>
            Your Savings
          </span>
          <span>
            $122.70
          </span>
        </p>
      </section>
    </section>
    <div
      className="c10"
    >
      <a
        className="c11"
        data-testid="next-step-button"
        href="/cart"
        onClick={[Function]}
      >
        Place Order
      </a>
    </div>
  </article>,
]
`;
